modified md file

--- a/summaries/15.md
+++ b/summaries/15.md
@@ -1,3 +1,8 @@
+---
+title: 'Poverty Rates by State'
+date: '2025-01-01'
+---
+
 ### Overview of Poverty Rates in the United States  
 Poverty rates across the United States reveal significant variation, ranging from a low of 7.2% in New Hampshire to a high of 19.1% in Mississippi. The national median is approximately 12%, with the majority of states experiencing poverty rates between 9% and 13%. This variation highlights notable disparities in economic conditions across regions.  
 
